--- a/supplement/supplement-main.Rmd
+++ b/supplement/supplement-main.Rmd
@@ -200,6 +200,22 @@ main_model <- hc(train, blacklist=theory_bl, score="custom", fun=cog_model_score
 ```
 
 
+```{r}
+## explore cpdag
+
+main_cpdag <- cpdag(main_model)
+
+# do plotting -- will likely see lots of ambiguity??
+plot(main_cpdag)
+
+# CPDAG edge directions ruled out by blacklist (10)
+ruled_out <- inner_join(as.data.frame(undirected.arcs(main_cpdag)), as.data.frame(theory_bl), by=c("from","to")) 
+
+# leaves 5 arcs that are unconstrained by both data and theory
+anti_join(as.data.frame(undirected.arcs(main_cpdag)), (ruled_out %>% bind_rows(ruled_out %>% rename(to="from", from="to")) ), by = c("from", "to"))
+
+# most substantive are vaccTox <--> vaccDanger, vaccEff
+```
 
 ```{r, include=FALSE}
 # # can bootstrap strength of arcs for winning model approach, focus interpretations on strength of arcs / parameterizations
@@ -232,6 +248,48 @@ if (!file.exists("../local/boot_res.rds")){
   saveRDS(boot_res,"../local/boot_res.rds")
 } else {
   boot_res <- readRDS("../local/boot_res.rds")
+}
+
+```
+
+```{r, include=F}
+
+source("../code/custom_plotting.R")
+
+recode_nodes <- function(x){
+  recode(x,
+         "diseaseRare" = "Disease Rarity",
+         "diseaseSevere" = "Disease Severity",
+         "hb" = "Holistic Balance",
+         "infantImmLimCap" = "IIS: Limited\nCapacity",
+         "infantImmWeak" = "IIS: Weakness",
+         "medSkept" = "Medical\nSkepticism",
+         "nat" = "Naturalism",
+         "overpar" = "Parental\nProtectiveness",
+         "parentExpert" = "Parental\nExpertise",
+         "vaccDanger" = "Vaccine\nDanger",
+         "vaccEff" = "Vaccine\nEffectiveness",
+         "vaccIntent" = "Vaccination\nIntentions",
+         "vaccStrain" = "IIS: Vaccines\nStrain",
+         "vaccTox" = "Vaccines\nToxicity"
+         )
+  }
+
+
+map_to_viridis <- function(vec, bins=64, option="D"){
+
+  binned <- cut(vec, bins)
+  levels(binned) <- viridis::viridis(bins, option=option)
+  
+  return(as.character(binned))
+}
+
+
+map_to_brewer <- function(vec, bins=11, option="RdYlBu"){
+  binned <- cut(vec, bins)
+  levels(binned) <- RColorBrewer::brewer.pal(bins, name=option)
+  
+  return(as.character(binned))
 }
 
 ```
@@ -302,42 +360,6 @@ boot_df <- boot_res %>% filter(strength>.2, direction>0)
 
 ```{r main_model_plot, echo=F, fig.align='center', fig.cap="Bayesian network model of intuitive theory surrounding vaccination decisions. Edge color indicates the magnitude of the generative (blue) or preventive (red) coeffient for the links."}
 
-source("../code/custom_plotting.R")
-
-recode_nodes <- function(x){
-  recode(x,
-         "diseaseRare" = "Disease Rarity",
-         "diseaseSevere" = "Disease Severity",
-         "hb" = "Holistic Balance",
-         "infantImmLimCap" = "IIS: Limited\nCapacity",
-         "infantImmWeak" = "IIS: Weakness",
-         "medSkept" = "Medical\nSkepticism",
-         "nat" = "Naturalism",
-         "overpar" = "Parental\nProtectiveness",
-         "parentExpert" = "Parental\nExpertise",
-         "vaccDanger" = "Vaccine\nDanger",
-         "vaccEff" = "Vaccine\nEffectiveness",
-         "vaccIntent" = "Vaccination\nIntentions",
-         "vaccStrain" = "IIS: Vaccines\nStrain",
-         "vaccTox" = "Vaccines\nToxicity"
-         )
-  }
-
-map_to_viridis <- function(vec, bins=64, option="D"){
-
-  binned <- cut(vec, bins)
-  levels(binned) <- viridis::viridis(bins, option=option)
-  
-  return(as.character(binned))
-}
-
-
-map_to_brewer <- function(vec, bins=11, option="RdYlBu"){
-  binned <- cut(vec, bins)
-  levels(binned) <- RColorBrewer::brewer.pal(bins, name=option)
-  
-  return(as.character(binned))
-}
 
 z <- custom_plot.HydeNetwork(h)
 
@@ -450,7 +472,7 @@ plt.valid <- test_analyze %>%
   mutate(varName = recode_nodes(varName)) %>%
   ggplot(aes(x=predValue, y=value)) + 
   geom_abline(slope=1, intercept=0, linetype="dashed", alpha=.33) +
-  geom_point(shape=1, size=.5, color="darkturquoise") + 
+  geom_point(shape=1, size=.5, color="#0067B1") + 
   geom_text(data=corrDF, aes(label=paste("r =", round(cor,2))),
             x=-Inf, y=Inf, hjust=-0.12, vjust=1.4,
             size = 10*.352777778,
@@ -465,6 +487,7 @@ plt.valid <- test_analyze %>%
         panel.grid.major = element_blank(), 
         panel.grid.minor = element_blank()) +
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
+
 
 plt.valid
 ```
@@ -731,26 +754,26 @@ Participants in the No Intervention condition (_n_=XX) completed an identical se
 ```{r s2_mean_diff_plot, echo=F, message=F, warning=F, fig.height=4, fig.width=6, fig.align='center', fig.cap="Mean difference scores from pretest to posttest for the 14 belief scales measured in Study 2. Error bars represent 95\\% confidence intervals."}
 
 # create plot of differences for all 14 scales
-
-s2_scored %>% 
-  spread(phase, mean) %>% 
-  drop_na(scale) %>% 
-  mutate(diff = post-pre) %>% 
-  mutate(
-    scale = recode_nodes2(scale),
-    condition = ifelse(condition=="noInterv", "Control", "Disease Risk")
-    ) %>% 
-  group_by(condition, scale) %>%
-  summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
-  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
-  geom_pointrange(position=position_dodge(width=.25)) +
-  geom_hline(yintercept=0, linetype="dashed", color="grey") +
-  theme_bw() +
-  theme(
-    axis.text.x = element_text(angle=45, hjust=1),
-    panel.grid = element_blank()
-    ) +
-  labs(title="Study 2", y = "Mean difference", x = "Belief scale", color="Intervention")
+# 
+# s2_scored %>% 
+#   spread(phase, mean) %>% 
+#   drop_na(scale) %>% 
+#   mutate(diff = post-pre) %>% 
+#   mutate(
+#     scale = recode_nodes2(scale),
+#     condition = ifelse(condition=="noInterv", "Control", "Disease Risk")
+#     ) %>% 
+#   group_by(condition, scale) %>%
+#   summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
+#   ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
+#   geom_pointrange(position=position_dodge(width=.25)) +
+#   geom_hline(yintercept=0, linetype="dashed", color="grey") +
+#   theme_bw() +
+#   theme(
+#     axis.text.x = element_text(angle=45, hjust=1),
+#     panel.grid = element_blank()
+#     ) +
+#   labs(title="Study 2", y = "Mean difference", x = "Belief scale", color="Intervention")
 ```
 
 ```{r s2_model, echo=FALSE, message=F, warning=F}
@@ -777,7 +800,7 @@ fit_s2_vaccIntent <- brm(
   file = "../local/fit_s2_vaccIntent.rds"
 )
 
-make_table <- function(fit, caption=NULL){
+make_table_df <- function(fit){
   fit_sum <- summary(fit)
 
   tbl_sum <- as_tibble(fit_sum$fixed, rownames="Term") %>% 
@@ -791,11 +814,29 @@ make_table <- function(fit, caption=NULL){
     ) %>% 
     select(-Rhat, -Est.Error, -Bulk_ESS, -Tail_ESS)
   
-  kableExtra::kbl(tbl_sum, digits = 2, booktabs = T, caption=caption) %>% 
+  return(tbl_sum)
+}
+
+make_table <- function(table_df, caption=NULL){
+    
+  kableExtra::kbl(table_df, digits = 2, booktabs = T, caption=caption) %>% 
     kableExtra::kable_classic(full_width=F)
 }
 
-make_table(fit_s2_vaccIntent, "Bayesian regression model coefficients for model of Vaccine Intentions in Experiment 2.")
+fit_s2_vaccIntent %>% 
+  make_table_df() %>% 
+  mutate(
+    Term = case_when(
+      # grepl("(diseaseRisk|post)", Term) ~ paste0("$\\beta{", 
+      #                                            gsub("(diseaseRisk|post)", "", Term),
+      #                                            "}$"),
+      grepl("Intercept\\[", Term) ~ gsub("Intercept\\[(.*)\\]","$\\\\alpha_{\\1}$", Term),
+      Term == "item_sd(Intercept)" ~ "$\\sigma_{item}$",
+      Term == "subj_sd(Intercept)" ~ "$\\sigma_{subj}$",
+      TRUE ~ gsub("(diseaseRisk|post)","", Term)
+    )
+  ) %>% 
+  make_table("Bayesian regression model coefficients for model of Vaccine Intentions in Experiment 2.")
 
 ```
 
@@ -814,21 +855,21 @@ base_model <- create_bnlearn_cog_model(main_model, train)
 ```{r s2_model_pred, echo=FALSE, fig.height=4, fig.width=4, fig.align="center", fig.cap="Mean observed and predicted change scores for Experiment 2. Error bars represent 95\\% confidence intervals."}
 # Generate model predictions + create plot
 # odd, I remember the results being slightly better than this, job talk says r=.87
-obs_pred <- make_pred_df(s2_mdf, base_model, "diseaseSevere")
-
-cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
-
-(obs_pred_plot <- obs_pred %>% # a bit of a hack
-  ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
-  geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
-  geom_point(size=2.5) +
-  geom_errorbar(alpha=.5, width=0) +
-  annotate(geom="text", x=.03, y=-.04, label= paste("r =", cor_val)) +
-  coord_cartesian(xlim=c(-.06,.06), ylim=c(-.06,.06)) +
-  theme_bw(base_size=14) +
-  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
-  theme(aspect.ratio = 1)) +
-  labs(title="Belief changes", subtitle="Experiment 2")
+# obs_pred <- make_pred_df(s2_mdf, base_model, "diseaseSevere")
+# 
+# cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
+# 
+# (obs_pred_plot <- obs_pred %>% # a bit of a hack
+#   ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
+#   geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
+#   geom_point(size=2.5) +
+#   geom_errorbar(alpha=.5, width=0) +
+#   annotate(geom="text", x=.03, y=-.04, label= paste("r =", cor_val)) +
+#   coord_cartesian(xlim=c(-.06,.06), ylim=c(-.06,.06)) +
+#   theme_bw(base_size=14) +
+#   theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+#   theme(aspect.ratio = 1)) +
+#   labs(title="Belief changes", subtitle="Experiment 2")
 
 # obs_pred %>%
 #   gather(type, Mean, observed, predicted) %>%
@@ -837,7 +878,7 @@ cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
 #   geom_errorbarh(height=0)
 ```
 
-```{r echo=F, fig.width=8, fig.height=4}
+```{r echo=F, warning=F, message=F, fig.width=8, fig.height=4, fig.cap="Belief changes following the intervention in Experiment 2. Left, mean difference scores from pretest to posttest for the 14 belief scales across experimental conditions. Right, mean observed and model predicted change scores for the disease risk intervention condition. In both plots, error bars represent 95\\% confidence intervals."}
 ## combined plot for paper
 library(patchwork)
 
@@ -851,7 +892,7 @@ s2_diff_plot <- s2_scored %>%
     ) %>% 
   group_by(condition, scale) %>%
   summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
-  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
+  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition, shape=condition)) +
   geom_pointrange(position=position_dodge(width=.25)) +
   geom_hline(yintercept=0, linetype="dashed", color="grey") +
   scale_color_manual(values=c("#0067b1","#c50024")) +
@@ -863,7 +904,7 @@ s2_diff_plot <- s2_scored %>%
     legend.direction = "horizontal",
     aspect.ratio=.5
     ) +
-  labs(title="A", y = "Mean difference", x = "Belief scale", color="Intervention")
+  labs(title="A", y = "Mean difference", x = "Belief scale", color="Intervention", shape="Intervention")
 
 obs_pred <- make_pred_df(s2_mdf, base_model, "diseaseSevere")
 
@@ -881,12 +922,15 @@ s2_obs_pred_plot <- obs_pred %>% # a bit of a hack
   theme(aspect.ratio = 1) +
   labs(title = "B", y = "Observed change", x="Predicted change")
 
-s2_diff_plot + s2_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+s2_plt <- s2_diff_plot + s2_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+
+
+s2_plt
 ```
 
 ## Studies 3a and 3b
 
-```{r echo=F, message=F}
+```{r echo=F, message=F, fig.align='center', fig.height=3, fig.width=3}
 
 # this is some code to genrate predictions of vacc intent change based on
 # hypothetical interventions
@@ -934,20 +978,20 @@ interv_sim <- corrmat["vaccIntent",] %>%
   bind_rows(vaccIntent_pred_results %>% mutate(type="model_pred")) %>%
   spread(type,value)
 
-interv_sim %>%
-  ggplot(aes(x=abs(correlation), y = model_pred)) +
-  geom_point()
+# interv_sim %>%
+#   ggplot(aes(x=abs(correlation), y = model_pred)) +
+#   geom_point()
 
 (pred_change_plot <- interv_sim %>% 
   filter(scale!="vaccIntent") %>%
     mutate(scale = recode_nodes2(scale)) %>% 
   ggplot(aes(x=reorder(scale, model_pred), y = model_pred)) + 
-  geom_bar(stat="identity") + 
+  geom_bar(stat="identity", fill = "#0067B1") + 
   coord_flip() +
-  labs(x="Targeted belief", y = "Predicted change in intentions") +
-  theme_bw(base_size=22) +
+  labs(x="Targeted belief", y = "Predicted change\nin intentions") +
+  theme_bw(base_size=10) +
   theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
-  theme(aspect.ratio = 1.5))
+  theme(aspect.ratio = 1))
   
 ```
 
@@ -970,30 +1014,31 @@ Due to the similarity of their designs, we combined data from studies 3a and 3b 
 ```{r, echo=FALSE, message=F, warning=F, fig.align="center", fig.cap = "Mean difference scores from pretest to posttest for the 14 belief scales measured in Experiment 3. Error bars represent 95\\% confidence intervals."}
 # create plot of differences for all 14 scales
 
-s3_scored %>% 
-  # spread(phase, mean) %>% 
-  drop_na(scale) %>% 
-  mutate(diff = post-pre) %>% 
-  mutate(
-    scale = recode_nodes2(scale),
-    condition = ifelse(condition=="noInterv", "Control", "Disease Risk")
-    ) %>% 
-  group_by(condition, scale) %>%
-  summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
-  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
-  geom_pointrange(position=position_dodge(width=.25)) +
-  geom_hline(yintercept=0, linetype="dashed", color="grey") +
-  theme_bw() +
-  theme(
-    axis.text.x = element_text(angle=45, hjust=1),
-    panel.grid = element_blank()
-    ) +
-  labs(title="Study 3a and 3b", y = "Mean difference", x = "Belief scale", color="Intervention")
+# s3_scored %>% 
+#   # spread(phase, mean) %>% 
+#   drop_na(scale) %>% 
+#   mutate(diff = post-pre) %>% 
+#   mutate(
+#     scale = recode_nodes2(scale),
+#     condition = ifelse(condition=="noInterv", "Control", "Disease Risk")
+#     ) %>% 
+#   group_by(condition, scale) %>%
+#   summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
+#   ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
+#   geom_pointrange(position=position_dodge(width=.25)) +
+#   geom_hline(yintercept=0, linetype="dashed", color="grey") +
+#   theme_bw() +
+#   theme(
+#     axis.text.x = element_text(angle=45, hjust=1),
+#     panel.grid = element_blank()
+#     ) +
+#   labs(title="Study 3a and 3b", y = "Mean difference", x = "Belief scale", color="Intervention")
 
 ```
 
 ```{r, echo=FALSE, message=F, warning=F}
 # compare conditions on vaccIntent w/ regression model
+
 # -- TODO: recode phase/condition 5/25/21, 11:07 AM
 s3_reg <- s3_long %>% 
   filter(scale=="vaccIntent") %>% 
@@ -1015,41 +1060,111 @@ fit_s3_vaccIntent <- brm(
   file = "../local/fit_s3_vaccIntent.rds"
 )
 
-
-make_table(fit_s3_vaccIntent, "Bayesian regression model coefficients for model of Vaccine Intentions in Experiment 3.")
+fit_s3_vaccIntent %>% 
+  make_table_df() %>% 
+  mutate(
+    Term = case_when(
+      # grepl("(diseaseRisk|post)", Term) ~ paste0("$\\beta{", 
+      #                                            gsub("(diseaseRisk|post)", "", Term),
+      #                                            "}$"),
+      grepl("Intercept\\[", Term) ~ gsub("Intercept\\[(.*)\\]","$\\\\alpha_{\\1}$", Term),
+      Term == "item_sd(Intercept)" ~ "$\\sigma_{item}$",
+      Term == "subj_sd(Intercept)" ~ "$\\sigma_{subj}$",
+      TRUE ~ gsub("(intervention|post)","", Term)
+    )
+  ) %>% 
+make_table("Bayesian regression model coefficients for model of Vaccine Intentions in Experiment 3.")
 ```
+
+We also analyzed each experiment individually.
+
+```{r, echo=FALSE, message=F, warning=F}
+
+fit_s3a_vaccIntent <- brm(
+  response ~ phase*condition + (1|item) + (1|workerId),
+  family = cumulative("logit"),
+  data = s3_reg %>% filter(study=="A"),
+  chains = 6,
+  cores = 6,
+  control = list(adapt_delta=.95),
+  seed = 69568,
+  file = "../local/fit_s3a_vaccIntent.rds"
+)
+
+fit_s3b_vaccIntent <- brm(
+  response ~ phase*condition + (1|item) + (1|workerId),
+  family = cumulative("logit"),
+  data = s3_reg %>% filter(study=="B"),
+  chains = 6,
+  cores = 6,
+  control = list(adapt_delta=.95),
+  seed = 69568,
+  file = "../local/fit_s3b_vaccIntent.rds"
+)
+
+fit_s3a_vaccIntent %>% 
+  make_table_df() %>% 
+  mutate(
+    Term = case_when(
+      # grepl("(diseaseRisk|post)", Term) ~ paste0("$\\beta{", 
+      #                                            gsub("(diseaseRisk|post)", "", Term),
+      #                                            "}$"),
+      grepl("Intercept\\[", Term) ~ gsub("Intercept\\[(.*)\\]","$\\\\alpha_{\\1}$", Term),
+      Term == "item_sd(Intercept)" ~ "$\\sigma_{item}$",
+      Term == "subj_sd(Intercept)" ~ "$\\sigma_{subj}$",
+      TRUE ~ gsub("(intervention|post)","", Term)
+    )
+  ) %>% 
+make_table("Bayesian regression model coefficients for model of Vaccine Intentions in Experiment 3a.")
+
+fit_s3b_vaccIntent %>% 
+  make_table_df() %>% 
+  mutate(
+    Term = case_when(
+      # grepl("(diseaseRisk|post)", Term) ~ paste0("$\\beta{", 
+      #                                            gsub("(diseaseRisk|post)", "", Term),
+      #                                            "}$"),
+      grepl("Intercept\\[", Term) ~ gsub("Intercept\\[(.*)\\]","$\\\\alpha_{\\1}$", Term),
+      Term == "item_sd(Intercept)" ~ "$\\sigma_{item}$",
+      Term == "subj_sd(Intercept)" ~ "$\\sigma_{subj}$",
+      TRUE ~ gsub("(intervention|post)","", Term)
+    )
+  ) %>% 
+make_table("Bayesian regression model coefficients for model of Vaccine Intentions in Experiment 3b.")
+```
+
 
 To model the effect of the vaccine toxicity intervention, we followed the same procedure as in Study 2, but this time augmented the model with a node representing the vaccine toxicity intervention as a child of the vaccine toxins belief node. The maximum likelihood estimate of the evidence ratio for the vaccine toxicity intervention was XXX. To simulate the impacts of this evidence, we supplied virtual evidence to the disease severity node by adding a child node to the cognitive-model network with a CPT capturing this evidence ratio.
 
 Figure X shows the correlation between predicted and observed belief changes conditional on the vaccine toxicity intervention.
 
 
-```{r, echo=F, fig.width=4, fig.height=4, fig.align="center", fig.cap="Mean observed and predicted change scores for Experiment 3. Error bars represent 95\\% confidence intervals."}
+```{r, echo=F, fig.width=4, fig.height=4, fig.align="center", fig.cap="Plots of belief changes following the intervention in Experiment 3. Left, mean difference scores from pretest to posttest for the 14 belief scales measured in Experiment 3. Mean observed and predicted change scores for Experiment 3. Error bars in both plots represent 95\\% confidence intervals. "}
 
 # this is not quite getting vacctox node right, could be because of effects in the control condition.
 
 # fit evidence node
-obs_pred <- make_pred_df(s3_mdf, base_model, "vaccTox")
-
-cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
-
-(
-  obs_pred_plot <- obs_pred %>% 
-  ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
-  geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
-  geom_point(size=2.5) +
-  geom_errorbar(alpha=.5, width=0) +
-  # coord_fixed(ratio=1) +
-  coord_cartesian(xlim=c(-.12,.08), ylim=c(-.12,.08)) +
-  annotate(geom="text", x=.05, y=-.1, label= paste("r =", cor_val)) +
-  theme_bw(base_size=14) +
-  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
-  theme(aspect.ratio = 1) +
-  labs(title="Belief changes",subtitle="Experiment 3a & 3b")
-)
+# obs_pred <- make_pred_df(s3_mdf, base_model, "vaccTox")
+# 
+# cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
+# 
+# (
+#   obs_pred_plot <- obs_pred %>% 
+#   ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
+#   geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
+#   geom_point(size=2.5) +
+#   geom_errorbar(alpha=.5, width=0) +
+#   # coord_fixed(ratio=1) +
+#   coord_cartesian(xlim=c(-.12,.08), ylim=c(-.12,.08)) +
+#   annotate(geom="text", x=.05, y=-.1, label= paste("r =", cor_val)) +
+#   theme_bw(base_size=14) +
+#   theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+#   theme(aspect.ratio = 1) +
+#   labs(title="Belief changes",subtitle="Experiment 3a & 3b")
+# )
 ```
 
-```{r fig.width=8, fig.height=4}
+```{r fig.width=8, fig.height=4, fig.cap="Belief changes following the intervention in Experiments 3a and 3b. Left, mean difference scores from pretest to posttest for the 14 belief scales across experimental conditions. Right, mean observed and model predicted change scores for the toxins intervention condition. In both plots, error bars represent 95\\% confidence intervals."}
 s3_diff_plot <- s3_scored %>% 
   # spread(phase, mean) %>% 
   drop_na(scale) %>% 
@@ -1060,7 +1175,7 @@ s3_diff_plot <- s3_scored %>%
     ) %>% 
   group_by(condition, scale) %>%
   summarize(M = mean(diff, na.rm=TRUE), se = sd(diff)/sqrt(n())) %>% 
-  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition)) +
+  ggplot(aes(x = reorder(scale,M), y = M, ymin = M-se*2, ymax=M+se*2, color=condition, shape=condition)) +
   geom_pointrange(position=position_dodge(width=.25)) +
   geom_hline(yintercept=0, linetype="dashed", color="grey") +
   scale_color_manual(values=c("#0067b1","#c50024")) +
@@ -1072,7 +1187,7 @@ s3_diff_plot <- s3_scored %>%
     legend.direction = "horizontal",
     aspect.ratio=.5
     ) +
-  labs(title="A", y = "Mean difference", x = "Belief scale", color="Intervention")
+  labs(title="A", y = "Mean difference", x = "Belief scale", color="Intervention", shape="Intervention")
 
 obs_pred <- make_pred_df(s3_mdf, base_model, "vaccTox")
 
@@ -1091,7 +1206,9 @@ s3_obs_pred_plot <- obs_pred %>%
   theme(aspect.ratio = 1) +
   labs(title = "B", y = "Observed change", x="Predicted change")
 
-s3_diff_plot + s3_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+s3_plt <- s3_diff_plot + s3_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+
+s3_plt
 ```
 
 
@@ -1141,7 +1258,12 @@ s4_meta <- list(
     filter(check_5!=5 | check_3!=3) %>% 
     filter(workerId %in% s1_all$workerId) %>% distinct(workerId) %>% nrow(), #%>% ,
   n_complete =s4_wide %>% 
-    filter(check_5==5, check_3==3, workerId %in% s1_all$workerId) %>% distinct(workerId) %>% nrow()
+    filter(check_5==5, check_3==3, workerId %in% s1_all$workerId) %>% distinct(workerId) %>% nrow(),
+  n_news = s4_wide %>%
+    filter(check_5==5, check_3==3, workerId %in% s1_all$workerId) %>% 
+    filter(vacc_news==1) %>% 
+    distinct(workerId) %>% 
+    nrow()
 )
 ```
 
@@ -1178,37 +1300,37 @@ rm(x)
 ```{r s4_diff_plot, echo=FALSE, message=F, warning=F, fig.align='center', fig.cap="Mean difference scores from pretest to posttest for the 14 belief scales measured in Study 3. Thick error bars represent standard errors, thin error bars represent 95\\% confidence intervals."}
 # compare effects in graph
 
-combined %>% 
-  filter(returned==TRUE, !is.na(vacc_news)) %>% # somehow 5? participants slippd by without answering 
-  mutate(diff = posttest-pretest) %>%
-  mutate(
-    vacc_news = as.factor(vacc_news),
-    scale = recode_nodes2(scale)
-    ) %>%
-  group_by(vacc_news,scale) %>%
-  summarize(
-    mean = mean(diff),
-    se = sd(diff)/sqrt(n()),
-    ul = mean + se,
-    ll = mean - se,
-    ul95 = mean + 1.96*se,
-    ll95 = mean - 1.96*se
-  ) %>%
-  ungroup() %>%
-  mutate(vacc_news = factor(vacc_news, c(1,0), labels=c("Yes","No"))) %>%
-  # mutate(phase = ordered(phase, levels=c("pretest","posttest"))) %>%
-  ggplot(aes(x=reorder(scale, mean), y = mean, ymin =ll, ymax=ul, color=vacc_news)) +
-  geom_point(position=position_dodge(width=.25), size=2, shape=16) +
-  geom_errorbar(position=position_dodge(width=.25), size=.75, width=0, alpha=.8) +
-  geom_errorbar(aes(ymin=ll95, ymax = ul95), width=0, position=position_dodge(width=.25), alpha=.5) +
-  geom_hline(yintercept = 0, linetype="dashed",alpha=.5) +
-  # facet_wrap(~scale, scales="free") +
-  theme_bw(base_size = 12) +
-  theme(
-    axis.text.x = element_text(angle = 45, hjust = 1), 
-    legend.position = "right",
-    panel.grid = element_blank()) +
-  labs(title="Study 4", y = "Change scores", x = "Belief scale", color ="News\nexposure")
+# combined %>% 
+#   filter(returned==TRUE, !is.na(vacc_news)) %>% # somehow 5? participants slippd by without answering 
+#   mutate(diff = posttest-pretest) %>%
+#   mutate(
+#     vacc_news = as.factor(vacc_news),
+#     scale = recode_nodes2(scale)
+#     ) %>%
+#   group_by(vacc_news,scale) %>%
+#   summarize(
+#     mean = mean(diff),
+#     se = sd(diff)/sqrt(n()),
+#     ul = mean + se,
+#     ll = mean - se,
+#     ul95 = mean + 1.96*se,
+#     ll95 = mean - 1.96*se
+#   ) %>%
+#   ungroup() %>%
+#   mutate(vacc_news = factor(vacc_news, c(1,0), labels=c("Yes","No"))) %>%
+#   # mutate(phase = ordered(phase, levels=c("pretest","posttest"))) %>%
+#   ggplot(aes(x=reorder(scale, mean), y = mean, ymin =ll, ymax=ul, color=vacc_news)) +
+#   geom_point(position=position_dodge(width=.25), size=2, shape=16) +
+#   geom_errorbar(position=position_dodge(width=.25), size=.75, width=0, alpha=.8) +
+#   geom_errorbar(aes(ymin=ll95, ymax = ul95), width=0, position=position_dodge(width=.25), alpha=.5) +
+#   geom_hline(yintercept = 0, linetype="dashed",alpha=.5) +
+#   # facet_wrap(~scale, scales="free") +
+#   theme_bw(base_size = 12) +
+#   theme(
+#     axis.text.x = element_text(angle = 45, hjust = 1), 
+#     legend.position = "right",
+#     panel.grid = element_blank()) +
+#   labs(title="Study 4", y = "Change scores", x = "Belief scale", color ="News\nexposure")
 ```
 
 ```{r, echo=FALSE, message=F, warning=F}
@@ -1226,7 +1348,21 @@ fit_s4_vaccIntent <- brm(
   file = "../local/fit_s4_vaccIntent.rds"
 )
 
-make_table(fit_s4_vaccIntent, "Bayesian regression model coefficients for model of Vaccine Intentions in Study 4.")
+fit_s4_vaccIntent %>% 
+make_table_df() %>% 
+  mutate(
+    Term = case_when(
+      # grepl("(diseaseRisk|post)", Term) ~ paste0("$\\beta{", 
+      #                                            gsub("(diseaseRisk|post)", "", Term),
+      #                                            "}$"),
+      grepl("Intercept\\[", Term) ~ gsub("Intercept\\[(.*)\\]","$\\\\alpha_{\\1}$", Term),
+      Term == "item_sd(Intercept)" ~ "$\\sigma_{item}$",
+      Term == "subj_sd(Intercept)" ~ "$\\sigma_{subj}$",
+      TRUE ~ gsub("(intervention|posttest)","", Term)
+    ),
+    Term = gsub("vacc_news", "awareness", Term)
+  ) %>% 
+make_table("Bayesian regression model coefficients for model of Vaccine Intentions in Study 4.")
 ```
 
 
@@ -1241,26 +1377,26 @@ Figure X shows the correlation between predicted and observed belief changes for
 # fit evidence node -- do diagnosis w/ bootstrapping? or just assume vaccIntent? I think just assume
 # generate model predictions + create plot
 
-obs_pred <- make_pred_df(s4_mdf, base_model, "vaccIntent")
-
-cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
-
-(obs_pred_plot <- obs_pred %>% # a bit of a hack
-  ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
-  geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
-  geom_point(size=2.5) +
-  geom_errorbar(alpha=.5, width=0) +
-  annotate(geom="text", x=.04, y=-.04, label= paste("r =", cor_val)) +
-  coord_cartesian(xlim=c(-.07,.06), ylim=c(-.07,.06)) +
-  theme_bw(base_size=14) +
-  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
-  theme(aspect.ratio = 1)) +
-  labs(title="Belief changes",subtitle="Study 4 - vaccIntent")
+# obs_pred <- make_pred_df(s4_mdf, base_model, "vaccIntent")
+# 
+# cor_val <- round(cor(obs_pred$predicted, obs_pred$observed),3)
+# 
+# (obs_pred_plot <- obs_pred %>% # a bit of a hack
+#   ggplot(aes(x=predicted, y = observed, ymin = ll, ymax=ul)) +
+#   geom_abline(slope=1, intercept=0, linetype="dashed", alpha =.5) +
+#   geom_point(size=2.5) +
+#   geom_errorbar(alpha=.5, width=0) +
+#   annotate(geom="text", x=.04, y=-.04, label= paste("r =", cor_val)) +
+#   coord_cartesian(xlim=c(-.07,.06), ylim=c(-.07,.06)) +
+#   theme_bw(base_size=14) +
+#   theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) +
+#   theme(aspect.ratio = 1)) +
+#   labs(title="Belief changes",subtitle="Study 4 - vaccIntent")
 
 ```
 
 
-```{r fig.width=8, fig.height=4}
+```{r echo=F, warning=F, message=F, fig.width=8, fig.height=4, fig.cap="Belief changes following the intervention in Study 4. Left, mean difference scores from pretest to posttest for the 14 belief scales among participants who did and did not report exposure to news of the 2019 Measles outbreak in New York. Right, mean observed and model predicted change scores for those who were exposed to news of the outbreak. In both plots, error bars represent 95\\% confidence intervals."}
 s4_diff_plot <- combined %>% 
   filter(returned==TRUE, !is.na(vacc_news)) %>% # somehow 5? participants slippd by without answering 
   mutate(diff = posttest-pretest) %>%
@@ -1280,12 +1416,12 @@ s4_diff_plot <- combined %>%
   ungroup() %>%
   mutate(vacc_news = factor(vacc_news, c(1,0), labels=c("Yes","No"))) %>%
   # mutate(phase = ordered(phase, levels=c("pretest","posttest"))) %>%
-  ggplot(aes(x=reorder(scale, mean), y = mean, ymin =ll, ymax=ul, color=vacc_news)) +
-  geom_point(position=position_dodge(width=.25), size=2, shape=16) +
-  geom_errorbar(position=position_dodge(width=.25), width=0, alpha=.8) +
+  ggplot(aes(x=reorder(scale, mean), y = mean, ymin =ll95, ymax=ul95, color=vacc_news, shape=vacc_news)) +
+  geom_point(position=position_dodge(width=.25), size=2) +
+  geom_errorbar(position=position_dodge(width=.25), width=0) +
   # geom_errorbar(aes(ymin=ll95, ymax = ul95), width=0, position=position_dodge(width=.25), alpha=.5) +
   geom_hline(yintercept = 0, linetype="dashed",alpha=.5) +
-  scale_color_manual(values=c("#0067b1","#c50024")) +
+  scale_color_manual(values=c("#0067b1","grey")) +
   theme_bw(base_size=11) +
   theme(
     axis.text.x = element_text(angle=45, hjust=1),
@@ -1294,7 +1430,7 @@ s4_diff_plot <- combined %>%
     legend.direction = "horizontal",
     aspect.ratio=.5
     ) +
-  labs(title="A", y = "Mean difference", x = "Belief scale", color="News Exposure")
+  labs(title="A", y = "Mean difference", x = "Belief scale", color="News Exposure", shape="News Exposure")
 
 obs_pred <- make_pred_df(s4_mdf, base_model, "vaccIntent")
 
@@ -1312,12 +1448,14 @@ s4_obs_pred_plot <- obs_pred %>% # a bit of a hack
   theme(aspect.ratio = 1) +
   labs(title = "B", y = "Observed change", x="Predicted change")
 
-s4_diff_plot + s4_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+s4_plt <- s4_diff_plot + s4_obs_pred_plot + plot_layout(ncol=2, widths = c(2,1))
+
+s4_plt
 ```
 
 ## Participant demographic summary
 
-The table below presents demographic information for participants across all four studies.
+The table below presents demographic information for participants across all five studies.
 
 ```{r, echo=FALSE, message=F, warning=F}
 library(table1)
@@ -1424,6 +1562,29 @@ table1::t1kable(demographics_tbl, booktabs = T) %>%
   kable_classic(latex_options="scale_down")
 
 ```
+
+
+```{r exports_for_paper, include=F}
+
+## save plots
+# export network plot as pdf/svg
+saveRDS(plt.valid, "../local/valid_plt.rds")
+saveRDS(s2_plt, "../local/s2_plt.rds")
+saveRDS(s3_plt, "../local/s3_plt.rds")
+saveRDS(s4_plt, "../local/s4_plt.rds")
+saveRDS(pred_change_plot, "../local/pred_change_plt.rds")
+
+## save numerical results
+results <- list(
+  s1 = list(demo = s1_meta),
+  s2 = list(demo = s2_meta, reg = fit_s2_vaccIntent),
+  s3 = list(demo = s3_meta, reg = fit_s3_vaccIntent),
+  s4 = list(demo = s4_meta, reg = fit_s4_vaccIntent)
+)
+
+saveRDS(results, "../local/paper-results.rds")
+```
+
 
 \newpage
 
